--- a/anfisa_for_friends/templates/about/description.html
+++ b/anfisa_for_friends/templates/about/description.html
@@ -3,5 +3,10 @@
   Анфиса для друзей. Описание проекта
 {% endblock %}
 {% block content %}
-  <h1>Описание проекта</h1>
+<!-- Блок content -->
+  <h1 class="pb-2 mb-0">О проекте</h1>
+  <p>
+  Каталог экзотических сортов мороженого.
+  </p>
+<!-- Конец блока content -->
 {% endblock %}
